[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/background/sky bg.png" type="Texture" id=1]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/buttons or icons/big biscuit.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/cancel button.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/save button.png" type="Texture" id=5]
[ext_resource path="res://Teacher/create quiz/AddQuestionPage.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="AddQuestionPage" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BiscuitBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -888.0
margin_top = -500.0
margin_right = 888.0
margin_bottom = 500.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectOptionLabel" type="Label" parent="BiscuitBackground"]
margin_left = 80.0
margin_top = 616.0
margin_right = 444.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Correct Option:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionContentLabel" type="Label" parent="BiscuitBackground"]
margin_left = 64.0
margin_top = 144.0
margin_right = 284.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Question:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumberLabel" type="Label" parent="BiscuitBackground"]
margin_left = 64.0
margin_top = 56.0
margin_right = 476.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Question Number:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongOptionsLabel" type="Label" parent="BiscuitBackground"]
margin_left = 72.0
margin_top = 464.0
margin_right = 512.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Incorrect Options:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumberInput" type="LineEdit" parent="."]
margin_left = 568.0
margin_top = 80.0
margin_right = 1008.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionContentInput" type="LineEdit" parent="."]
margin_left = 136.0
margin_top = 236.0
margin_right = 1784.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongOptionInput1" type="LineEdit" parent="."]
margin_left = 144.0
margin_top = 552.0
margin_right = 600.0
margin_bottom = 614.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongOptionInput2" type="LineEdit" parent="."]
margin_left = 744.0
margin_top = 552.0
margin_right = 1200.0
margin_bottom = 614.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongOptionInput3" type="LineEdit" parent="."]
margin_left = 1336.0
margin_top = 552.0
margin_right = 1792.0
margin_bottom = 614.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectOptionInput" type="LineEdit" parent="."]
margin_left = 144.0
margin_top = 720.0
margin_right = 600.0
margin_bottom = 782.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="."]
margin_left = 576.0
margin_top = 840.0
margin_right = 928.0
margin_bottom = 1020.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="TextureButton" parent="."]
margin_left = 1032.0
margin_top = 800.0
margin_right = 1392.0
margin_bottom = 1056.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
